# nivalis

./: .gitmodules  CMakeLists.txt  README.md  ast_nodes.cpp  bugs.txt  diff_expr.cpp  env.cpp  eval_expr.cpp  expr.cpp  main.cpp  main_nivalis.cpp  main_nivplot.cpp  opcodes.cpp  parser.cpp  plotgui.cpp  plotter.cpp  util.cpp  version.hpp.in
build-emcc/: build.py  glfw-patch.js  index.html
build-emcc/css/: 3rdparty.css  main.css  simple-console.css
build-emcc/js/: main.js
cmake/: FindNana.cmake
include/: ast_nodes.hpp  color.hpp  diff_expr.hpp  env.hpp  eval_expr.hpp  expr.hpp  opcodes.hpp  optimize_expr.hpp  parser.hpp  plotgui.hpp  plotter.hpp  point.hpp  shell.hpp  util.hpp  version.hpp
include/internal/: thunk.hpp
include/plotter/: common.hpp  draw_worker.hpp  imgui_adaptor.hpp  internal.hpp  nanovg_adaptor.hpp  plot_gui.hpp  plotter.hpp
include/plotter/internal/: plotter.hpp
include/resources/: roboto.h
js/: bootstrap.min.js  emModule.js  glfwPatch.js  guiComponents.js  init.js  jquery-3.5.1.slim.min.js  mathquill.js  pickr.min.js  pickrconfig.js  simple-console.js  util.js
plotter/: common.cpp  nana_backend.cpp  opengl_imgui_backend.cpp
src/: ast_nodes.cpp  color.cpp  diff_expr.cpp  env.cpp  eval_expr.cpp  expr.cpp  latex_nivalis_conv.cpp  main_nivalis.cpp  main_nivplot.cpp  main_web.cpp  main_webworker.cpp  opcodes.cpp  optimize_expr.cpp  parser.cpp  point.cpp  shell.cpp  util.cpp
src/internal/: thunk.cpp
src/plotter/: common.cpp  gui.cpp  imgui_adaptor.cpp  nana_backend.cpp  nanovg_adaptor.cpp  opengl_imgui_backend.cpp  render.cpp
test/: test_common.hpp  test_diff_expr.cpp  test_eval_expr.cpp  test_optimize_expr.cpp  test_parser.cpp
